# ANormalThursdayNight

./: .gitignore  CMakeLists.txt  README.md
ANormalThursdayNight/: CMakeLists.txt  Character.cpp  Character.h  Item.cpp  Item.h  Modifier.cpp  Modifier.h  ModifierList.h  main.cpp
Java/src/: Character.java  GlobalMembers.java  Item.java  Modifier.java
Java/tangible/: ConsoleInput.java  RandomNumbers.java
